@@ -8,8 +8,8 @@
     +---+------------------------------------------------------------+---+
     |   | 08b : version number (3)                                   |   |
     | O | 08b : cipher type (munge_cipher_t)                         | O |
-    | U | 08b : compression type (munge_zip_t)                       | U |
-    | T | 08b : message authentication code type (munge_mac_t)       | T |
+    | U | 08b : message authentication code type (munge_mac_t)       | U |
+    | T | 08b : compression type (munge_zip_t)                       | T |
     | E | 08b : length (in bytes) of security realm string           | E |
     | R | var : security realm string (w/o terminating NUL)          | R |
     |   | var : cipher IV (initialization vector)                    |   |
